loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:1: error: Missing closing brace `}' assumed here
do{var nb = 0
^Poucet2:16: error: ';' expected but 'while' found.
}while(!sortieTrouvee())
 ^Poucet2:20: error: 'while' expected but '}' found.
}
^