loopdowhile.Poucet2.scala.code
do{var nb = 0
   avance()
   if (estSurBiscuit()){
      nb = nb +1
  while(!crossing()){
    avance()
    if (estSurBiscuit()){
      nb = nb +1
    }
  }
  if (nb<=2){
    droite()
  }else if(nb>=3){
    gauche()
  }
}while(!sortieTrouvee())
avance()